auth updation
